--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,18 +17,19 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".activity.StoresNearYouActivity"
-            android:exported="false"
-            android:label="@string/title_activity_stores_near_you" />
-        <activity
             android:name=".activity.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activity.StoresNearYouActivity"
+            android:exported="false"
+            android:label="@string/title_activity_stores_near_you" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -37,5 +38,4 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
     </application>
-
 </manifest>
